# advent_of_code

./: .gitignore  Cargo.toml  README.md  Stuff I want.md
aoc_solvers/: Cargo.toml
aoc_solvers/src/: lib.rs
aoc_solvers/src/y2022/: d1.rs  d10.rs  d11.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d7.rs  d8.rs  d9.rs  mod.rs
aoc_solvers/src/y2023/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d16.rs  d17.rs  d18.rs  d20.rs  d21.rs  d3.rs  d4.rs  d7.rs  mod.rs
aoc_solvers/src/y2024/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
aoc_solvers/src/y2025/: d1.rs  d10.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs  mod.rs
execute_proc_macro/: Cargo.toml
execute_proc_macro/src/: lib.rs
helpers/: Cargo.toml
helpers/src/: lib.rs  prelude.rs  run_with_cycle.rs  string_helpers.rs  tile_map.rs
proc_macros/: Cargo.toml
proc_macros/src/: execute.rs  from_regex.rs  lib.rs  tile.rs
proc_macros/tests/: from_regex_tests.rs
src/: main.rs
src/aoc_lib/: board.rs  entry_parser.rs  from_regex.rs  mod.rs  parse_to_num.rs  regex_captures.rs  shape.rs  string_helpers.rs  tile_map.rs
src/util/: mod.rs  tile_map.rs
src/y2022/: d1.rs  d10.rs  d11.rs  d12.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2023/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2024/: d1.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d2.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
src/y2025/: d1.rs  d10.rs  d11.rs  d12.rs  d2.rs  d3.rs  d4.rs  d5.rs  d6.rs  d7.rs  d8.rs  d9.rs
tile_proc_macro/: Cargo.toml
tile_proc_macro/src/: lib.rs
