[package]
name = "advent_of_code"
version = "42.42.42"
edition = "2021"

[dependencies]
rayon = "1.8.0"
num = "0.4.1"
geo = "0.27.0"
pathfinding = "4.4.0"
itertools = "0.13.0"
colored = "2.1.0"
execute_proc_macro = { path = "execute_proc_macro" }
pad = { git = "https://github.com/Warhorst/pad.git" }
regex = "1.11.1"

[workspace]
members = [
    "execute_proc_macro"
]