[package]
name = "advent_of_code"
version = "42.42.42"
edition = "2024"

[dependencies]
rayon = "1.8.0"
num = "0.4.1"
geo = "0.27.0"
pathfinding = "4.12.0"
itertools = "0.13.0"
colored = "2.1.0"
proc_macros = { path = "proc_macros" }
pad = { git = "https://github.com/Warhorst/pad.git", tag = "1.2.0" }
bitarray = {git = "https://github.com/Warhorst/bitarray.git", tag = "1.0.1"}
regex = "1.11.1"
indoc = "2.0.5"
microlp = "0.2.11"

[workspace]
members = [
    "proc_macros",
]
