[package]
name = "aoc_solvers"
version = "0.1.0"
edition = "2024"

[dependencies]
rayon = "1.8.0"
itertools = "0.13.0"
geo = "0.27.0"
microlp = "0.2.11"
bitarray = {git = "https://github.com/Warhorst/bitarray.git", tag = "1.0.1"}
helpers = { path = "../helpers" }
proc_macros = { path = "../proc_macros" }
